@@ -14,21 +14,22 @@
 package org.bonitasoft.engine.bpm.process;
 
 import static java.util.Arrays.asList;
+import static java.util.Map.entry;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.SoftAssertions.assertSoftly;
+import static org.awaitility.Awaitility.await;
 import static org.bonitasoft.engine.data.instance.api.DataInstanceContainer.ACTIVITY_INSTANCE;
 import static org.bonitasoft.engine.data.instance.api.DataInstanceContainer.PROCESS_INSTANCE;
 import static org.junit.Assert.fail;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.concurrent.Callable;
+import java.util.*;
 
 import org.bonitasoft.engine.bpm.bar.BarResource;
 import org.bonitasoft.engine.bpm.bar.BusinessArchiveBuilder;
 import org.bonitasoft.engine.bpm.bar.actorMapping.Actor;
 import org.bonitasoft.engine.bpm.bar.actorMapping.ActorMapping;
 import org.bonitasoft.engine.bpm.connector.ConnectorEvent;
+import org.bonitasoft.engine.bpm.contract.FileInputValue;
 import org.bonitasoft.engine.bpm.contract.Type;
 import org.bonitasoft.engine.bpm.document.DocumentValue;
 import org.bonitasoft.engine.bpm.process.impl.ProcessDefinitionBuilder;
@@ -64,7 +65,17 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
         List<Long> userTaskInstances = new ArrayList<>();
         for (int i = 0; i < 2; i++) {
             long id = getProcessAPI().startProcessWithInputs(mainProcess.getId(),
-                    Collections.singletonMap("simpleInput1", "singleInputValue")).getId();
+                    Map.ofEntries(entry("simpleInput1", "singleInputValue"),
+                            entry("myFile", new FileInputValue("testFile", "testFile".getBytes()))))
+                    .getId();
+            var archivedFileInput = await().until(() -> inTx(
+                    () -> getServiceAccessor().getContractDataService().getArchivedProcessDataValue(id, "myFile")),
+                    Objects::nonNull);
+            assertThat(archivedFileInput)
+                    .as("File input content of archived contract data should be null")
+                    .isInstanceOf(FileInputValue.class)
+                    .extracting("content")
+                    .isNull();
             long userTask1 = waitForUserTask(id, "userTask1");
             userTaskInstances.add(userTask1);
             getProcessAPI().assignUserTask(userTask1, user.getId());
@@ -80,7 +91,7 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
 
         getProcessAPI().deleteArchivedProcessInstancesInAllStates(processInstances);
 
-        getServiceAccessor().getUserTransactionService().executeInTransaction((Callable<Void>) () -> {
+        inTx(() -> {
             for (Long userTaskInstance : userTaskInstances) {
                 try {
                     getServiceAccessor().getContractDataService().getArchivedUserTaskDataValue(userTaskInstance,
@@ -139,7 +150,9 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
         ProcessDefinition sub2 = createSubProcessDefinitionWithUserTask(user);
 
         long id = getProcessAPI().startProcessWithInputs(mainProcess.getId(),
-                Collections.singletonMap("simpleInput1", "singleInputValue")).getId();
+                Map.ofEntries(entry("simpleInput1", "singleInputValue"),
+                        entry("myFile", new FileInputValue("testFile", "testFile".getBytes()))))
+                .getId();
         waitForUserTask(id, "userTask1");
         waitForUserTask("taskOfSubProcess");
         waitForUserTask("taskOfSubProcess");
@@ -183,7 +196,9 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
     protected ProcessDefinition createMainProcessDefinition() throws Exception {
         ProcessDefinitionBuilder mainProcessBuilder = new ProcessDefinitionBuilder()
                 .createNewInstance("mainProcess", "1.0");
-        mainProcessBuilder.addContract().addInput("simpleInput1", Type.TEXT, "a simple input");
+        mainProcessBuilder.addContract()
+                .addInput("simpleInput1", Type.TEXT, "a simple input")
+                .addFileInput("myFile", "A file input");
         mainProcessBuilder.addActor("actor");
         mainProcessBuilder.addUserTask("userTask1", "actor").addContract().addInput("simpleInputTask", Type.TEXT,
                 "a simple task input");
@@ -226,7 +241,7 @@ public class DeleteProcessInstancesIT extends CommonAPILocalIT {
                 .addAutomaticTask("autoWithConnector")
                 .addConnector("connector1", "myConnector", "1.0", ConnectorEvent.ON_ENTER)
                 .addAutomaticTask("autoWithData").addShortTextData("activityData", s("activityDataValue")).getProcess())
-                        .done());
+                .done());
     }
 
     protected ProcessDefinition createSubProcessDefinitionWithUserTask(User user) throws Exception {
